@@ -1,3 +1,8 @@
+2017-02-01  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/graph3d.c (plot3d_points) src/gadgets.{ch} src/graphics.c:
+	Apply pointinterval property to splot with linespoints.
+
 2017-01-27  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/util.c (print_line_with_error):  Replace macros
